--- a/legacy/template/matrix.html
+++ b/legacy/template/matrix.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <meta charset="utf-8">
 <title>E-Commerce Sales Analysis by Cosmetics Brand</title>
-<link href="/static/css/styles.css" rel="stylesheet">
+<link href="/legacy/static/css/styles.css" rel="stylesheet">
 <link rel="/static/css/bootstrap.min.css">
 
-<script src="/static/js/libs/d3.v2.min.js"></script>
+<script src="/legacy/static/static/js/libs/d3.v2.min.js"></script>
 
 <body>
   <header>
@@ -30,7 +30,7 @@
     <p id="group"></p>
   </aside>
 
-  <script src="/static/js/matrix.js"></script>
+  <script src="/legacy/static/static/js/matrix.js"></script>
   <p class="attribution">Inspired by: <a href="https://bost.ocks.org/mike/miserables/">Mike Bostock</a>.</p>
 
   <footer>
