--- a/team1-visualization/style.css
+++ b/team1-visualization/style.css
@@ -142,27 +142,40 @@ g.tick {
 
 .transportStats .icon {width:30px;height:30px;background-size:30px; display:inline-block; margin-right:10px;vertical-align: middle;}
 
-span[data="bus"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/bus-icon.svg");  /*border-right:1px white solid;*/}
-span[data="train"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/train-icon.svg");}
-span[data="plane"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/plane-icon.svg");}
-span[data="car"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/car-icon.svg");/* border-left:1px white solid;*/}
+span[data="DCED"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/bus-icon.svg");  /*border-right:1px white solid;*/}
+span[data="UNDP_Private_Sector_Strategy_2007"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/train-icon.svg");}
+span[data="UNDP_Private_Sector_Strategy_2012"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/plane-icon.svg");}
+span[data="UNDP_Private_Sector_Strategy_2016"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/car-icon.svg");/* border-left:1px white solid;*/}
+span[data="UNDP_Private_Sector_Strategy_2018"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/car-icon.svg");/* border-left:1px white solid;*/}
+span[data="UNDP_Private_Sector_Strategy_2018_2022"] {background-image:url("https://github.com/goeuro/static_content/blob/master/web/Design/car-icon.svg");/* border-left:1px white solid;*/}
 
-.transline#train , .textT {
+
+.transline#DCED , .textT {
   stroke:#F3648A;
   color:#F3648A;
 }
 
-.transline#plane  , .textP{
+.transline#UNDP_Private_Sector_Strategy_2007  , .textP{
   stroke:#F7A61B;
   color:#F7A61B;
 }
 
-.transline#bus , .textB {
+.transline#UNDP_Private_Sector_Strategy_2012 , .textB {
   stroke:#88CE81;
   color:#88CE81;
 }
 
-.transline#car , .textC{
+.transline#UNDP_Private_Sector_Strategy_2016 , .textC{
+  stroke:#8BC5E7;
+  color:#8BC5E7;
+}
+
+.transline#UNDP_Private_Sector_Strategy_2018 , .textC{
+  stroke:#8BC5E7;
+  color:#8BC5E7;
+}
+
+.transline#UNDP_Private_Sector_Strategy_2018_2022 , .textC{
   stroke:#8BC5E7;
   color:#8BC5E7;
 }
