--- a/team1-visualization/style.css
+++ b/team1-visualization/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family:'Futura','Helvetica',sans-serif;
+  font-family:'Helvetica',sans-serif;
   box-sizing:border-box;
   -webkit-box-sizing:border-box;
 }
