--- a/team1-visualization/style.css
+++ b/team1-visualization/style.css
@@ -166,8 +166,8 @@ span[data="UNDP_Private_Sector_Strategy_2018_2022"] {background-image:url("https
 }
 
 .transline#UNDP_Private_Sector_Strategy_2016 , .textC{
-  stroke:#8BC5E7;
-  color:#8BC5E7;
+  stroke:#2E93fA;
+  color:#2E93fA;
 }
 
 .transline#UNDP_Private_Sector_Strategy_2018 , .textC{
@@ -176,6 +176,6 @@ span[data="UNDP_Private_Sector_Strategy_2018_2022"] {background-image:url("https
 }
 
 .transline#UNDP_Private_Sector_Strategy_2018_2022 , .textC{
-  stroke:#8BC5E7;
-  color:#8BC5E7;
+  stroke:#E91E63;
+  color:#E91E63;
 }
